--- a/BlogFE/src/pages/Employee/styles.module.scss
+++ b/BlogFE/src/pages/Employee/styles.module.scss
@@ -62,6 +62,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: max-content;
   .imgWrap {
     width: 30px;
     height: 30px;
